--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,18 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.settings/language.settings.xml
+/Alligator/
+/RADDS/
+/RADDS_RTOS/
+/SAM3X8E/
+/SAM3X8E_RTOS/
+/SAM4E8E/
+/SAM4E8E_RTOS/
+/SAM4S/
+/SAM4S_RTOS/
+/SAM4S_RTOS_PCCB/
+/SAME70/
+/SAME70_RTOS/
+/SAME70XPLD/
+/SAME70XPLD_RTOS/
