--- a/.gitignore
+++ b/.gitignore
@@ -48,15 +48,10 @@ Temporary Items
 .settings/language.settings.xml
 /Alligator/
 /RADDS/
-/RADDS_RTOS/
 /SAM3X8E/
-/SAM3X8E_RTOS/
 /SAM4E8E/
-/SAM4E8E_RTOS/
 /SAM4S/
-/SAM4S_RTOS/
-/SAM4S_RTOS_PCCB/
+/SAM4S_PCCB/
 /SAME70/
-/SAME70_RTOS/
+/SAME70_DUET3V03
 /SAME70XPLD/
-/SAME70XPLD_RTOS/
