--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-.settings/language.settings.xml
+.settings/
 /Alligator/
 /RADDS/
 /SAM3X8E/
